# tamandua-server

./: .dockerignore  .env.example.notifications  .gitignore  .muzak.exs  CONTRIBUTING.md  Dockerfile  Dockerfile.runtime-validation-runner  NOTICE  README.md  coveralls.json  mix.exs  run_e2e_tests.sh  test_app_routes.sh
.github/workflows/: ci.yml
assets/: .eslintrc.cjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
assets/css/: app.css  similarity.css  tokens.css
assets/e2e/: 01-auth.spec.ts  02-dashboard.spec.ts  03-process-tree.spec.ts  04-navigation.spec.ts  05-api.spec.ts  06-accessibility.spec.ts  07-network.spec.ts  08-hunt.spec.ts  09-alerts.spec.ts  10-agents.spec.ts  11-mitre.spec.ts  12-api-comprehensive.spec.ts  README.md  ai-analysis-pages.spec.ts  ai-evidence-consumer.unauthenticated.spec.ts  (+14 more)
config/: config.exs  data_residency.example.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ALERT_EXPORTS.md  ALERT_TIMELINE_GUIDE.md  ALERT_TIMELINE_IMPLEMENTATION_SUMMARY.md  ALERT_TIMELINE_QUICKSTART.md  POLICY_MANAGEMENT.md  POLICY_QUICK_START.md  enrichment_pipeline.md
lib/: tamandua_server_web.ex
priv/: threat_intel_config.example.json
scripts/: check_network_events.exs
tamandua_nif/: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mix.exs  verify_build.sh
tamandua_nif/native/tamandua_nif/: Cargo.toml
tamandua_nif/native/tamandua_nif/.cargo/: config.toml
tamandua_nif/native/tamandua_nif/src/: entropy.rs  hash.rs  ioc.rs  lib.rs  sigma.rs  yara_scanner.rs
test/: test_helper.exs
(+2826 files in other folders)
